Fixed crash when no detections in one field
Former-commit-id: 4382782a80b4db69b1f3158716e75ef51785f872

--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "region_name = \"TDS_ELAISN1\"  #_ELAISN1\n",
+    "region_name = \"TDS\"  #_ELAISN1\n",
     "\n",
     "# Add artifacts here\n",
     "dd_arts = [{\"field_id\":\"GNU2597312684324028416\", \"ra\":243.31, \"dec\":55.79, \"rad\":0.01},   # 0 Detection structures next to bright source\n",
@@ -40,8 +40,9 @@
     "           {\"field_id\":\"GNU2597383053068206080\", \"ra\":245.22, \"dec\":54.90, \"rad\":0.03},   # 11 Ring\n",
     "           {\"field_id\":\"GNU2597734896789094400\", \"ra\":241.67, \"dec\":54.69, \"rad\":0.03},   # 12 Ring\n",
     "           {\"field_id\":\"GNU2597734896789094400\", \"ra\":241.12, \"dec\":54.42, \"rad\":0.03},   # 13 Ring\n",
-    "           {\"field_id\":\"GFU2597523790556561408\", \"ra\":241.405, \"dec\":55.615, \"rad\":0.03}  # 14 Ring without bright source, also NuV, Galaxy MCG+09-26-052 \n",
-    "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
+    "           {\"field_id\":\"GFU2597523790556561408\", \"ra\":241.405, \"dec\":55.615, \"rad\":0.03},  # 14 Ring without bright source, also NuV, Galaxy MCG+09-26-052\n",
+    "           # From here on TDS non TDS_ELAI artifacts\n",
+    "           {\"field_id\":\"GNU2592738715952480256\", \"ra\":34.92, \"dec\":-4.35, \"rad\":0.08},   #15 Large circle of circles with multiple detections on it\n",
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
@@ -52,15 +53,28 @@
     "\n",
     "#Select artifacts that lead to detection removal. New column with \"art_sel\" will be created for detections to cut on. \n",
     "#This variable is zero if none of the artifacts below is selected, othervise the \"artifact value\"\n",
-    "art_bit_sel = [2,4,8,128] # http://www.galex.caltech.edu/wiki/GCAT_Manual#Flags\n",
+    "art_bit_sel = [1,2,4,8,16,32,64,128,256,512] # [2,4,8,128]\n",
+    "\n",
+    "# http://www.galex.caltech.edu/wiki/GCAT_Manual#Flags\n",
+    "[1,2,4,8,16,32,64,128,256,512]\n",
+    "#    ( 1): edge; Detector bevel edge reflection (NUV only).\n",
+    "#    ( 2): window; Detector window reflection (NUV only).\n",
+    "#    ( 4): dichroic; Dichroic reflection.\n",
+    "#    ( 8): varpix; Varible pixel based on time slices.\n",
+    "#    ( 16): brtedge; Bright star near field edge (NUV only)\n",
+    "#    ( 32): Detector rim(annulus); proximity(>0.6 deg fld ctr)\n",
+    "#    ( 64): dimask; dichroic reflection artifact mask flag\n",
+    "#    (128): varmask; Masked pixel determined by varpix.\n",
+    "#    (256): hotmask; Detector hot spots.\n",
+    "#    (512): yaghost; Possible ghost image from YA slope. This is only relevant for data taken after the completion of GR6. \n",
     "\n",
     "s2n_min    = 5                                                       # Minimum s2n of detections\n",
-    "r_fov_max  = 0.6                                                     #Maximum distance from the camera center\n",
+    "r_fov_max  = 0.5                                                     #Maximum distance from the camera center\n",
     "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"]     # Variables to be used to select detections on artifacts\n",
-    "vars_sel   = [[0.35,1.0]    ,[7,np.inf] ,[-0.5,0.01] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
+    "vars_sel   = [[0.25,1.0]    ,[6,np.inf] ,[-0.5,0.1] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
     "vars_col   = [\"b\"          ,\"m\"         ,\"g\"         ,\"w\"]           # Circle color for selected detections on artifacts\n",
     "vars_ms    = [8            ,6.5         , 5          ,3.5]           # Marker size of circles showing detections selected by these artifacts. \n",
-    "vars_bins  = [20           ,\"sqrt\"      , 20         ,\"sqrt\"]        # Nr bins for histogram plots\n",
+    "vars_bins  = [40           ,\"sqrt\"      , 40         ,\"sqrt\"]        # Nr bins for histogram plots\n",
     "vars_log   = [False        ,True        , False      , True ]        # Show histograms in logy?\n",
     "lw = 0.8                                                             # Line width for circles of detections on skymaps"
    ]
@@ -121,12 +135,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38fcc5df2c864d86b7713a8083cf97e9",
+       "model_id": "a939991dcae14c3b8ae3c9cd2f3da935",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='art_idx', max=14), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='art_idx', max=15), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 3,
@@ -139,8 +153,7 @@
     "    # Get field\n",
     "    dd_art = dd_arts[art_idx]\n",
     "    fd = rg.get_field(field_id=dd_art[\"field_id\"], load_method=\"FITS\", add_field=True)\n",
-    "\n",
-    "  \n",
+    "    \n",
     "    # Prepare figute and sky region\n",
     "    fig_art = plt.figure(\"Sky map artifact\",figsize=(8, 7))\n",
     "    sky_center = SkyCoord(dd_art[\"ra\"]*uu.deg, dd_art[\"dec\"]*uu.deg, frame=\"icrs\")\n",
