Continued artifact cut optimization
Former-commit-id: c4031816adfe241d430063209dfc930dd8f11d95

--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "region_name = \"TDS\"  #_ELAISN1\n",
+    "region_name = \"TDS_ELAISN1\"  #_ELAISN1\n",
     "\n",
     "# Add artifacts here\n",
     "dd_arts = [{\"field_id\":\"GNU2597312684324028416\", \"ra\":243.31, \"dec\":55.79, \"rad\":0.01},   # 0 Detection structures next to bright source\n",
@@ -68,10 +68,10 @@
     "#    (256): hotmask; Detector hot spots.\n",
     "#    (512): yaghost; Possible ghost image from YA slope. This is only relevant for data taken after the completion of GR6. \n",
     "\n",
-    "s2n_min    = 5                                                       # Minimum s2n of detections\n",
+    "s2n_min    = 4                                                       # Minimum s2n of detections\n",
     "r_fov_max  = 0.5                                                     #Maximum distance from the camera center\n",
     "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"]     # Variables to be used to select detections on artifacts\n",
-    "vars_sel   = [[0.25,1.0]    ,[6,np.inf] ,[-0.5,0.1] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
+    "vars_sel   = [[0.3,1.0]    ,[6,np.inf] ,[-0.5,0.2] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
     "vars_col   = [\"b\"          ,\"m\"         ,\"g\"         ,\"w\"]           # Circle color for selected detections on artifacts\n",
     "vars_ms    = [8            ,6.5         , 5          ,3.5]           # Marker size of circles showing detections selected by these artifacts. \n",
     "vars_bins  = [40           ,\"sqrt\"      , 40         ,\"sqrt\"]        # Nr bins for histogram plots\n",
@@ -135,7 +135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a939991dcae14c3b8ae3c9cd2f3da935",
+       "model_id": "684a6133ebca4a0fa530f834ecf3abcb",
        "version_major": 2,
        "version_minor": 0
       },
