--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "region_name = \"TDS_ELAISN1\"  #_ELAISN1\n",
+    "region_name = \"TDS\"  #_ELAISN1\n",
     "\n",
     "# Add artifacts here\n",
     "dd_arts = [{\"field_id\":\"GNU2597312684324028416\", \"ra\":243.31, \"dec\":55.79, \"rad\":0.01},   # 0 Detection structures next to bright source\n",
@@ -42,9 +42,11 @@
     "           {\"field_id\":\"GNU2597734896789094400\", \"ra\":241.12, \"dec\":54.42, \"rad\":0.03},   # 13 Ring\n",
     "           {\"field_id\":\"GFU2597523790556561408\", \"ra\":241.405, \"dec\":55.615, \"rad\":0.03},  # 14 Ring without bright source, also NuV, Galaxy MCG+09-26-052\n",
     "           # From here on TDS non TDS_ELAI artifacts\n",
-    "           {\"field_id\":\"GNU2592738715952480256\", \"ra\":34.92, \"dec\":-4.35, \"rad\":0.08},   #15 Large circle of circles with multiple detections on it\n",
-    "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
-    "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
+    "           {\"field_id\":\"GNU2592738715952480256\", \"ra\":34.92, \"dec\":-4.35, \"rad\":0.08},     # 15 Large circle of circles with multiple detections on it\n",
+    "           {\"field_id\":\"GNU2598086740509982720\", \"ra\":333.98, \"dec\":0.03, \"rad\":0.08},     # 16 Large circle of circles with multiple detections on it\n",
+    "           {\"field_id\":\"GNU2607375414741434368\", \"ra\":213.82, \"dec\":52.54, \"rad\":0.08},    # 17 Large circle of circles with multiple detections on it\n",
+    "           {\"field_id\":\"GNU2607375414741434368\", \"ra\":213.752, \"dec\":52.58, \"rad\":0.005},  # 18  Zoom into above where source is\n",
+    "           {\"field_id\":\"GFU2592597978464124928\", \"ra\":35.87, \"dec\":-3.37, \"rad\":0.03},     # 19 FUV multiple rings in one another\n",
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
     "        ]\n",
     "\n",
@@ -135,12 +137,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "684a6133ebca4a0fa530f834ecf3abcb",
+       "model_id": "105610ae137b410e8dca83966867f753",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='art_idx', max=15), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='art_idx', max=19), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 3,
