--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "region_name = \"TDS_ELAISN1\" # _ELAISN1\n",
+    "region_name = \"TDS\" # _ELAISN1\n",
     "sort_par = \"rg_src_id\" # \"flux\"\n",
     "redo_src_sel = False\n",
     "only_sel_srcs = True\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "a47713fa-f128-425f-a2d0-754e64ffb654",
    "metadata": {
     "tags": []
@@ -44,55 +44,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 25310 selected: 229\n"
+      "Nr sources: 117460 selected: 958\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=16</i>\n",
-       "<table id=\"table140303325567184\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=84</i>\n",
+       "<table id=\"table140540745704272\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field_id</th><th>field_name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes8</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int64</th></tr></thead>\n",
-       "<tr><td>GNU2592738715952480256</td><td>PS_XMMLSS_MOS02</td><td>34.995648096666685</td><td>-3.95320684099725</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>24</td><td>23118.55</td><td>54791.399976851855</td><td>56670.07746654369</td><td>1</td></tr>\n",
-       "<tr><td>GNU2597312684324028416</td><td>PS_ELAISN1_MOS10</td><td>242.50638203682297</td><td>55.9801443588634</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>24</td><td>29566.4</td><td>54960.17787037037</td><td>56821.33210648148</td><td>2</td></tr>\n",
-       "<tr><td>GNU2597383053068206080</td><td>PS_ELAISN1_MOS11</td><td>244.57200462478102</td><td>55.1825511621234</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>25</td><td>31369.5</td><td>54960.24638888889</td><td>56815.50054271557</td><td>3</td></tr>\n",
-       "<tr><td>GNU2597453421812383744</td><td>PS_ELAISN1_MOS12</td><td>242.896209389035</td><td>55.0003489374844</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>21</td><td>26349.451</td><td>54960.314884259256</td><td>56814.569061234084</td><td>4</td></tr>\n",
-       "<tr><td>GNU2597523790556561408</td><td>PS_ELAISN1_MOS13</td><td>241.28881797574297</td><td>55.3529870930308</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>27810.902</td><td>54960.38337962963</td><td>56819.53759259259</td><td>5</td></tr>\n",
-       "<tr><td>GNU2597594159300739072</td><td>PS_ELAISN1_MOS14</td><td>243.95513153083402</td><td>54.1978605194106</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>26881.852</td><td>54960.451886574076</td><td>56810.60611111111</td><td>6</td></tr>\n",
+       "<tr><td>GNU2592597978464124928</td><td>PS_XMMLSS_MOS00</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>27</td><td>40457.25</td><td>54791.262777777774</td><td>57213.3405928096</td><td>1</td></tr>\n",
+       "<tr><td>GNU2592668347208302592</td><td>PS_XMMLSS_MOS01</td><td>36.49984981667359</td><td>-3.4923125504146</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>26</td><td>38608.996</td><td>54791.33122685185</td><td>57205.55893265336</td><td>2</td></tr>\n",
+       "<tr><td>GNU2592738715952480256</td><td>PS_XMMLSS_MOS02</td><td>34.995648096666685</td><td>-3.95320684099725</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>24</td><td>23118.55</td><td>54791.399976851855</td><td>56670.07746654369</td><td>3</td></tr>\n",
+       "<tr><td>GNU2592809084696657920</td><td>PS_XMMLSS_MOS03</td><td>35.87152971805409</td><td>-4.25258328683038</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>21</td><td>31699.102</td><td>54791.468136574076</td><td>57205.5459979022</td><td>4</td></tr>\n",
+       "<tr><td>GNU2592879453440835584</td><td>PS_XMMLSS_MOS04</td><td>36.890941423843685</td><td>-4.42319486511272</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>23</td><td>34784.05</td><td>54791.53658564815</td><td>57214.614389105904</td><td>5</td></tr>\n",
+       "<tr><td>GNU2592949822185013248</td><td>PS_XMMLSS_MOS05</td><td>35.19163328261652</td><td>-5.0517494636978</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>32845.8</td><td>54791.60503472222</td><td>57205.68289605035</td><td>6</td></tr>\n",
        "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>GFU2597383053068206080</td><td>PS_ELAISN1_MOS11</td><td>244.57200462478102</td><td>55.1825511621234</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6896.3994</td><td>54960.24638888889</td><td>56501.58207429109</td><td>11</td></tr>\n",
-       "<tr><td>GFU2597453421812383744</td><td>PS_ELAISN1_MOS12</td><td>242.896209389035</td><td>55.0003489374844</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6929.0996</td><td>54960.314884259256</td><td>56508.650511791086</td><td>12</td></tr>\n",
-       "<tr><td>GFU2597523790556561408</td><td>PS_ELAISN1_MOS13</td><td>241.28881797574297</td><td>55.3529870930308</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6942.2</td><td>54960.38337962963</td><td>56506.76889919705</td><td>13</td></tr>\n",
-       "<tr><td>GFU2597594159300739072</td><td>PS_ELAISN1_MOS14</td><td>243.95513153083402</td><td>54.1978605194106</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6951.2</td><td>54960.451886574076</td><td>56513.78742151331</td><td>14</td></tr>\n",
-       "<tr><td>GFU2597664528044916736</td><td>PS_ELAISN1_MOS15</td><td>242.396514585217</td><td>53.9999872930018</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6977.0</td><td>54960.52040509259</td><td>56519.80583333333</td><td>15</td></tr>\n",
-       "<tr><td>GFU2597734896789094400</td><td>PS_ELAISN1_MOS16</td><td>241.37385712300306</td><td>54.4519391954855</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6887.0</td><td>54960.588912037034</td><td>56510.974315863714</td><td>16</td></tr>\n",
+       "<tr><td>GFU2607093939764723712</td><td>PS_GROTH_MOS02</td><td>213.77799348532596</td><td>54.3533934809404</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>4828.85</td><td>54955.519328703704</td><td>55809.91989709925</td><td>79</td></tr>\n",
+       "<tr><td>GFU2607164308508901376</td><td>PS_GROTH_MOS03</td><td>214.14752584163693</td><td>53.4132903803254</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>5351.1504</td><td>54955.58777777778</td><td>56301.63832429109</td><td>80</td></tr>\n",
+       "<tr><td>GFU2607234677253079040</td><td>PS_GROTH_MOS04</td><td>212.397804323772</td><td>53.7029450147134</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>5378.6</td><td>54955.656273148146</td><td>56384.656747685185</td><td>81</td></tr>\n",
+       "<tr><td>GFU2607305045997256704</td><td>PS_GROTH_MOS05</td><td>215.49424460210594</td><td>52.7780196325928</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>5378.4</td><td>54955.725069444445</td><td>56363.92515950521</td><td>82</td></tr>\n",
+       "<tr><td>GFU2607375414741434368</td><td>PS_GROTH_MOS06</td><td>214.300238834909</td><td>52.5500705847555</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>3369.75</td><td>54955.79356481481</td><td>55725.543969907405</td><td>83</td></tr>\n",
+       "<tr><td>GFU2607445783485612032</td><td>PS_GROTH_MOS07</td><td>212.62676625037193</td><td>52.7521896298337</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>3</td><td>4024.15</td><td>54955.86178240741</td><td>56349.212406141494</td><td>84</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=16>\n",
-       "       field_id           field_name    ...     time_stop      rg_fd_id\n",
-       "                                        ...         d                  \n",
-       "       bytes32             bytes32      ...      float64        int64  \n",
-       "---------------------- ---------------- ... ------------------ --------\n",
-       "GNU2592738715952480256  PS_XMMLSS_MOS02 ...  56670.07746654369        1\n",
-       "GNU2597312684324028416 PS_ELAISN1_MOS10 ...  56821.33210648148        2\n",
-       "GNU2597383053068206080 PS_ELAISN1_MOS11 ...  56815.50054271557        3\n",
-       "GNU2597453421812383744 PS_ELAISN1_MOS12 ... 56814.569061234084        4\n",
-       "GNU2597523790556561408 PS_ELAISN1_MOS13 ...  56819.53759259259        5\n",
-       "GNU2597594159300739072 PS_ELAISN1_MOS14 ...  56810.60611111111        6\n",
-       "                   ...              ... ...                ...      ...\n",
-       "GFU2597383053068206080 PS_ELAISN1_MOS11 ...  56501.58207429109       11\n",
-       "GFU2597453421812383744 PS_ELAISN1_MOS12 ... 56508.650511791086       12\n",
-       "GFU2597523790556561408 PS_ELAISN1_MOS13 ...  56506.76889919705       13\n",
-       "GFU2597594159300739072 PS_ELAISN1_MOS14 ...  56513.78742151331       14\n",
-       "GFU2597664528044916736 PS_ELAISN1_MOS15 ...  56519.80583333333       15\n",
-       "GFU2597734896789094400 PS_ELAISN1_MOS16 ... 56510.974315863714       16"
+       "<Table length=84>\n",
+       "       field_id           field_name   ...     time_stop      rg_fd_id\n",
+       "                                       ...         d                  \n",
+       "       bytes32             bytes32     ...      float64        int64  \n",
+       "---------------------- --------------- ... ------------------ --------\n",
+       "GNU2592597978464124928 PS_XMMLSS_MOS00 ...   57213.3405928096        1\n",
+       "GNU2592668347208302592 PS_XMMLSS_MOS01 ...  57205.55893265336        2\n",
+       "GNU2592738715952480256 PS_XMMLSS_MOS02 ...  56670.07746654369        3\n",
+       "GNU2592809084696657920 PS_XMMLSS_MOS03 ...   57205.5459979022        4\n",
+       "GNU2592879453440835584 PS_XMMLSS_MOS04 ... 57214.614389105904        5\n",
+       "GNU2592949822185013248 PS_XMMLSS_MOS05 ...  57205.68289605035        6\n",
+       "                   ...             ... ...                ...      ...\n",
+       "GFU2607093939764723712  PS_GROTH_MOS02 ...  55809.91989709925       79\n",
+       "GFU2607164308508901376  PS_GROTH_MOS03 ...  56301.63832429109       80\n",
+       "GFU2607234677253079040  PS_GROTH_MOS04 ... 56384.656747685185       81\n",
+       "GFU2607305045997256704  PS_GROTH_MOS05 ...  56363.92515950521       82\n",
+       "GFU2607375414741434368  PS_GROTH_MOS06 ... 55725.543969907405       83\n",
+       "GFU2607445783485612032  PS_GROTH_MOS07 ... 56349.212406141494       84"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[b'GNU2592597978464124928' b'GNU2592668347208302592'\n",
+      " b'GNU2592738715952480256' b'GNU2592809084696657920'\n",
+      " b'GNU2592879453440835584' b'GNU2592949822185013248'\n",
+      " b'GNU2593020190929190912' b'GNU2593653509626789888'\n",
+      " b'GNU2593723878370967552' b'GNU2593794247115145216'\n",
+      " b'GNU2593864615859322880' b'GNU2593934984603500544'\n",
+      " b'GNU2594005353347678208' b'GNU2594075722091855872'\n",
+      " b'GNU2597312684324028416' b'GNU2597383053068206080'\n",
+      " b'GNU2597453421812383744' b'GNU2597523790556561408'\n",
+      " b'GNU2597594159300739072' b'GNU2597664528044916736'\n",
+      " b'GNU2597734896789094400' b'GNU2597875634277449728'\n",
+      " b'GNU2597946003021627392' b'GNU2598016371765805056'\n",
+      " b'GNU2598086740509982720' b'GNU2598157109254160384'\n",
+      " b'GNU2598227477998338048' b'GNU2598297846742515712'\n",
+      " b'GNU2604912508670050304' b'GNU2604982877414227968'\n",
+      " b'GNU2605053246158405632' b'GNU2605123614902583296'\n",
+      " b'GNU2605193983646760960' b'GNU2605264352416104448'\n",
+      " b'GNU2605334721135116288' b'GNU2607023571020546048'\n",
+      " b'GNU2607093939764723712' b'GNU2607164308508901376'\n",
+      " b'GNU2607234677253079040' b'GNU2607305045997256704'\n",
+      " b'GNU2607375414741434368' b'GNU2607445783485612032'\n",
+      " b'GFU2592597978464124928' b'GFU2592668347208302592'\n",
+      " b'GFU2592738715952480256' b'GFU2592809084696657920'\n",
+      " b'GFU2592879453440835584' b'GFU2592949822185013248'\n",
+      " b'GFU2593020190929190912' b'GFU2593653509626789888'\n",
+      " b'GFU2593723878370967552' b'GFU2593794247115145216'\n",
+      " b'GFU2593864615859322880' b'GFU2593934984603500544'\n",
+      " b'GFU2594005353347678208' b'GFU2594075722091855872'\n",
+      " b'GFU2597312684324028416' b'GFU2597383053068206080'\n",
+      " b'GFU2597453421812383744' b'GFU2597523790556561408'\n",
+      " b'GFU2597594159300739072' b'GFU2597664528044916736'\n",
+      " b'GFU2597734896789094400' b'GFU2597875634277449728'\n",
+      " b'GFU2597946003021627392' b'GFU2598016371765805056'\n",
+      " b'GFU2598086740509982720' b'GFU2598157109254160384'\n",
+      " b'GFU2598227477998338048' b'GFU2598297846742515712'\n",
+      " b'GFU2604912508670050304' b'GFU2604982877414227968'\n",
+      " b'GFU2605053246158405632' b'GFU2605123614902583296'\n",
+      " b'GFU2605193983646760960' b'GFU2605264352416104448'\n",
+      " b'GFU2605334721135116288' b'GFU2607023571020546048'\n",
+      " b'GFU2607093939764723712' b'GFU2607164308508901376'\n",
+      " b'GFU2607234677253079040' b'GFU2607305045997256704'\n",
+      " b'GFU2607375414741434368' b'GFU2607445783485612032']\n"
+     ]
     }
    ],
    "source": [
@@ -116,7 +164,7 @@
     "#Setup some global setup parameters that usually don't need to be adjusted\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\",\"assoc_ffactor\",\"assoc_fdiff_s2n\"]\n",
-    "show_map_pars = [\"rg_src_id\",\"obs_filter_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\",\"sel\"]\n",
+    "show_map_pars = [\"rg_src_id\",\"obs_filter_id\",\"ra\",\"dec\",\"pos_err\",\"pos_xv\", \"pos_cpval\",\"nr_det\",\"flux\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\",\"sel\"]\n",
     "\n",
     "#Load region\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
@@ -137,7 +185,8 @@
     "tt_srcs.sort(sort_par)\n",
     "tt_srcs.add_index(\"rg_src_id\")\n",
     "#display(tt_srcs)\n",
-    "display(rg.tt_fields)"
+    "display(rg.tt_fields)\n",
+    "print(rg.tt_fields[\"field_id\"].data)"
    ]
   },
   {
@@ -159,12 +208,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e3a6fc67b5845af9233ce64d9ad753c",
+       "model_id": "297b5fb4999c4ecfa742ff533cc27a1f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(17, 18, 47, 69, 98, 179, 213, 250, 32…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(9, 60, 61, 89, 110, 138, 206, 237, 27…"
       ]
      },
      "metadata": {},
@@ -293,12 +342,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e3cb342c616485b97141f9aa7e85fe8",
+       "model_id": "0facf9fc8b6544d4893897bda95dbe2f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=8, description='rg_fd_id', max=16, min=1), Output()), _dom_classes=('wid…"
+       "interactive(children=(IntSlider(value=42, description='rg_fd_id', max=84, min=1), Output()), _dom_classes=('wi…"
       ]
      },
      "execution_count": 4,
@@ -338,12 +387,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d458e6db8b24fbfae6cc1ea0bac81cf",
+       "model_id": "45bb600cbd6d4b3db7de8b219329c7d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=22, description='block_nr', max=45), Output()), _dom_classes=('widget-in…"
+       "interactive(children=(IntSlider(value=95, description='block_nr', max=191), Output()), _dom_classes=('widget-i…"
       ]
      },
      "execution_count": 5,
