--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -55,10 +55,10 @@
     "\n",
     "#Select artifacts that lead to detection removal. New column with \"art_sel\" will be created for detections to cut on. \n",
     "#This variable is zero if none of the artifacts below is selected, othervise the \"artifact value\"\n",
-    "art_bit_sel = [1,2,4,8,16,32,64,128,256,512] # [2,4,8,128]\n",
+    "art_bit_sel = [2,4,8,16,32,64,128,256,512] # [2,4,8,128]\n",
     "\n",
     "# http://www.galex.caltech.edu/wiki/GCAT_Manual#Flags\n",
-    "[1,2,4,8,16,32,64,128,256,512]\n",
+    "# [1,2,4,8,16,32,64,128,256,512]\n",
     "#    ( 1): edge; Detector bevel edge reflection (NUV only).\n",
     "#    ( 2): window; Detector window reflection (NUV only).\n",
     "#    ( 4): dichroic; Dichroic reflection.\n",
@@ -73,7 +73,7 @@
     "s2n_min    = 4                                                       # Minimum s2n of detections\n",
     "r_fov_max  = 0.5                                                     #Maximum distance from the camera center\n",
     "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"]     # Variables to be used to select detections on artifacts\n",
-    "vars_sel   = [[0.3,1.0]    ,[6,np.inf] ,[-0.5,0.2] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
+    "vars_sel   = [[0.3,1.0]    ,[6,np.inf] ,[-0.5,0.15] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
     "vars_col   = [\"b\"          ,\"m\"         ,\"g\"         ,\"w\"]           # Circle color for selected detections on artifacts\n",
     "vars_ms    = [8            ,6.5         , 5          ,3.5]           # Marker size of circles showing detections selected by these artifacts. \n",
     "vars_bins  = [40           ,\"sqrt\"      , 40         ,\"sqrt\"]        # Nr bins for histogram plots\n",
@@ -137,7 +137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "105610ae137b410e8dca83966867f753",
+       "model_id": "1fb6117298f047daaa2967002179842f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,6 +186,9 @@
     "    #Plot all detections that pass s2n\n",
     "    kdet_s2n = {\"marker\":\"o\",\"color\":\"r\",\"markersize\": 10,\"alpha\":1,\"markeredgewidth\": lw}\n",
     "    ax, tt_det = vvis.plot_sky_sources(tt_det_all, src_id=None,src_kwargs=kdet_s2n, sky_region_wcs = (sky_art,wcs_art), only_selected=True)\n",
+    "\n",
+    "    plot_srcs = {\"marker\": \"x\",\"markersize\": 10,\"color\":\"yellow\"}\n",
+    "    vvis.plot_sky_sources(rg.tt_sources,tt_det=None, src_kwargs=plot_srcs, sky_region_wcs = (sky_art,wcs_art),only_selected=True) \n",
     "    \n",
     "    if len(tt_det) == 0:\n",
     "        print(\"No detections passed the s2n and r_fov cut in this cutout\")\n",
