Modified time bin format
Former-commit-id: 95aeea8b376668ab2c67a8a9a05c858c3f3ff7a3

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -31,7 +31,8 @@
     "only_sel_srcs = True\n",
     "srcs_ids = [426,6443,16219,21144,31319,32456,37591,45449,54367,79172,98114,104239,114023]  # EB* matches\n",
     "srcs_ids = [10225 ,94811 ,] # SN*\n",
-    "srcs_ids = [3227 ] # LI?"
+    "srcs_ids = [3227 ] # LI?\n",
+    "srcs_ids = [2052 ,15179 ,15934 ,] # High nxv_fuv RR*"
    ]
   },
   {
@@ -48,53 +49,6 @@
      "text": [
       "Nr sources: 123024 selected: 1030\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><i>Table length=84</i>\n",
-       "<table id=\"table139691156521024\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>field_id</th><th>field_name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
-       "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
-       "<thead><tr><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes8</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int64</th></tr></thead>\n",
-       "<tr><td>GNU2592597978464124928</td><td>PS_XMMLSS_MOS00</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>27</td><td>40457.25</td><td>54791.262777777774</td><td>57213.3405928096</td><td>1</td></tr>\n",
-       "<tr><td>GNU2592668347208302592</td><td>PS_XMMLSS_MOS01</td><td>36.49984981667359</td><td>-3.4923125504146</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>26</td><td>38608.996</td><td>54791.33122685185</td><td>57205.55893265336</td><td>2</td></tr>\n",
-       "<tr><td>GNU2592738715952480256</td><td>PS_XMMLSS_MOS02</td><td>34.995648096666685</td><td>-3.95320684099725</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>24</td><td>23118.55</td><td>54791.399976851855</td><td>56670.07746654369</td><td>3</td></tr>\n",
-       "<tr><td>GNU2592809084696657920</td><td>PS_XMMLSS_MOS03</td><td>35.87152971805409</td><td>-4.25258328683038</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>21</td><td>31699.102</td><td>54791.468136574076</td><td>57205.5459979022</td><td>4</td></tr>\n",
-       "<tr><td>GNU2592879453440835584</td><td>PS_XMMLSS_MOS04</td><td>36.890941423843685</td><td>-4.42319486511272</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>23</td><td>34784.05</td><td>54791.53658564815</td><td>57214.614389105904</td><td>5</td></tr>\n",
-       "<tr><td>GNU2592949822185013248</td><td>PS_XMMLSS_MOS05</td><td>35.19163328261652</td><td>-5.0517494636978</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>32845.8</td><td>54791.60503472222</td><td>57205.68289605035</td><td>6</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>GFU2607093939764723712</td><td>PS_GROTH_MOS02</td><td>213.77799348532596</td><td>54.3533934809404</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>4828.85</td><td>54955.519328703704</td><td>55809.91989709925</td><td>79</td></tr>\n",
-       "<tr><td>GFU2607164308508901376</td><td>PS_GROTH_MOS03</td><td>214.14752584163693</td><td>53.4132903803254</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>5351.1504</td><td>54955.58777777778</td><td>56301.63832429109</td><td>80</td></tr>\n",
-       "<tr><td>GFU2607234677253079040</td><td>PS_GROTH_MOS04</td><td>212.397804323772</td><td>53.7029450147134</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>5378.6</td><td>54955.656273148146</td><td>56384.656747685185</td><td>81</td></tr>\n",
-       "<tr><td>GFU2607305045997256704</td><td>PS_GROTH_MOS05</td><td>215.49424460210594</td><td>52.7780196325928</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>5378.4</td><td>54955.725069444445</td><td>56363.92515950521</td><td>82</td></tr>\n",
-       "<tr><td>GFU2607375414741434368</td><td>PS_GROTH_MOS06</td><td>214.300238834909</td><td>52.5500705847555</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>4</td><td>3369.75</td><td>54955.79356481481</td><td>55725.543969907405</td><td>83</td></tr>\n",
-       "<tr><td>GFU2607445783485612032</td><td>PS_GROTH_MOS07</td><td>212.62676625037193</td><td>52.7521896298337</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>3</td><td>4024.15</td><td>54955.86178240741</td><td>56349.212406141494</td><td>84</td></tr>\n",
-       "</table></div>"
-      ],
-      "text/plain": [
-       "<Table length=84>\n",
-       "       field_id           field_name   ...     time_stop      rg_fd_id\n",
-       "                                       ...         d                  \n",
-       "       bytes32             bytes32     ...      float64        int64  \n",
-       "---------------------- --------------- ... ------------------ --------\n",
-       "GNU2592597978464124928 PS_XMMLSS_MOS00 ...   57213.3405928096        1\n",
-       "GNU2592668347208302592 PS_XMMLSS_MOS01 ...  57205.55893265336        2\n",
-       "GNU2592738715952480256 PS_XMMLSS_MOS02 ...  56670.07746654369        3\n",
-       "GNU2592809084696657920 PS_XMMLSS_MOS03 ...   57205.5459979022        4\n",
-       "GNU2592879453440835584 PS_XMMLSS_MOS04 ... 57214.614389105904        5\n",
-       "GNU2592949822185013248 PS_XMMLSS_MOS05 ...  57205.68289605035        6\n",
-       "                   ...             ... ...                ...      ...\n",
-       "GFU2607093939764723712  PS_GROTH_MOS02 ...  55809.91989709925       79\n",
-       "GFU2607164308508901376  PS_GROTH_MOS03 ...  56301.63832429109       80\n",
-       "GFU2607234677253079040  PS_GROTH_MOS04 ... 56384.656747685185       81\n",
-       "GFU2607305045997256704  PS_GROTH_MOS05 ...  56363.92515950521       82\n",
-       "GFU2607375414741434368  PS_GROTH_MOS06 ... 55725.543969907405       83\n",
-       "GFU2607445783485612032  PS_GROTH_MOS07 ... 56349.212406141494       84"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -139,7 +93,7 @@
     "tt_srcs.sort(sort_par)\n",
     "tt_srcs.add_index(\"rg_src_id\")\n",
     "#display(tt_srcs)\n",
-    "display(rg.tt_fields)\n",
+    "#display(rg.tt_fields)\n",
     "#print(rg.tt_fields[\"field_id\"].data)"
    ]
   },
@@ -162,12 +116,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae894486a8d0429db3b28acd98b9b495",
+       "model_id": "8f9bf8bdaee14e8992b93bcb3f237672",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(3227,), value=3227), IntSlider(value=…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(2052, 15179, 15934), value=2052), Int…"
       ]
      },
      "metadata": {},
@@ -245,7 +199,7 @@
     "    print(\"\\nFields this source was detected in:\")\n",
     "    display(tc_src.tt_fields)\n",
     "    print(\"\\nDetections:\")\n",
-    "    display(tc_src.tt_detections[sel_det_src])\n",
+    "    tc_src.tt_detections[sel_det_src].pprint_all()\n",
     "\n",
     "    # Display sources only for the shown field\n",
     "    #fd_src_id = rg.tt_src_id_map[sel_fd_src][\"fd_src_id\"][0]\n",
@@ -296,7 +250,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e3bb7696a6940138072a64d574a5697",
+       "model_id": "b87c6ffe9a7246a69e77b80cfc5d9b66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -341,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fda0c2915fe843b48946c5f9d161ae90",
+       "model_id": "8732526a4a424ebe8ea96e54340c2965",
        "version_major": 2,
        "version_minor": 0
       },
